--- a/Hafta04/02_JavaScript/12_DOM/01_Intro/index.html
+++ b/Hafta04/02_JavaScript/12_DOM/01_Intro/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title>Variable Data Types</title>
+    <title>Document</title>
 </head>
 <body>
+    <div class="card-header">
+        <h3 class="card-tittle display-5">ToDo List</h3>
+    </div>
+   
+    <ul class="card-header"></ul>
+    <div id="task-list">
 
-
+    </div>
 
     
     <script src="app.js"></script>
