--- a/Hafta05/01_JavaScript/02-Calculator/index.html
+++ b/Hafta05/01_JavaScript/02-Calculator/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" class="calculator-input" value="0" disabled>
+        <input type="text" class="calculator-input" disabled>
         <div class="calculator-keys">
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
-            <button type="button" class="operator" value="&times;">&times;</button>
-            <button type="button" class="operator" value="&divide;">&divide;</button>
-
+            <button type="button" class="operator" value="*">&times</button>
+            <button type="button" class="operator" value="/">&divide</button>
 
             <button type="button" value="7">7</button>
             <button type="button" value="8">8</button>
@@ -31,19 +30,13 @@
 
             <button type="button" value="0">0</button>
 
-            <button type="button" class="decimel" value=".">.</button>
+            <button type="button" class="decimal" value=".">.</button>
             <button type="button" class="clear" value="clear">AC</button>
             <button type="button" class="operator equal-sign" value="=">=</button>
-            
 
 
         </div>
-
-
     </div>
-
-
-
 
     <script src="app.js"></script>
 </body>
