--- a/Hafta05/01_JavaScript/03-Not Sepeti - Kopya/index.html
+++ b/Hafta05/01_JavaScript/03-Not Sepeti - Kopya/index.html
@@ -16,24 +16,11 @@
             <span>Not Sepeti</span>
         </div>
         <div class="input">
-            <input class="task" type="search"> <button class="plus"><i class="fa-solid fa-square-plus"></i></button>
+            <input class="task" type="search"><button class="plus"><i class="fa-solid fa-square-plus"></i></button>
         </div>
 
-        <div class="inputs">
-            <ul class="list">
-                <li class="task-box">
-                    <div class="task">
-                        <div>
-                            <input class="gorev-ad" type="text">
-                        </div>
-                        <div class="edit">
-                            <button class="düzenle"><i class="fa-solid fa-square-check"></i></button><button class="sil"><i class="fa-solid fa-trash-can"></i></button>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <!-- <div class="notlar">
+
+        <div class="notlar">
             <ul class="not-listesi">
                 <li class="not">
                     <div class="not-kutusu">
@@ -41,7 +28,7 @@
                     </div>
                 </li>
             </ul>
-        </div> -->
+        </div>
     </div>
 
 
