--- a/Hafta05/01_JavaScript/03-Not Sepeti/index.html
+++ b/Hafta05/01_JavaScript/03-Not Sepeti/index.html
@@ -24,7 +24,7 @@
             <ul class="not-listesi">
                 <li class="not">
                     <div class="not-kutusu">
-                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button">+</button><button class="not-sil" type="button">-</button>
+                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button"><i class="fa-solid fa-square-check"></i></i></button><button class="not-sil" type="button"><i class="fa-solid fa-trash-can"></i></button>
                     </div>
                 </li>
             </ul>
@@ -33,7 +33,7 @@
             <ul class="not-listesi">
                 <li class="not">
                     <div class="not-kutusu">
-                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button">+</button><button class="not-sil" type="button">-</button>
+                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button"><i class="fa-solid fa-square-check"></i></button><button class="not-sil" type="button"><i class="fa-solid fa-trash-can"></i></button>
                     </div>
                 </li>
             </ul>
@@ -42,7 +42,7 @@
             <ul class="not-listesi">
                 <li class="not">
                     <div class="not-kutusu">
-                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button">+</button><button class="not-sil" type="button">-</button>
+                        <input class="not-ad" type="text" name="" id="" disabled><button class="not-tamamlandi" type="button"><i class="fa-solid fa-square-check"></i></button><button class="not-sil" type="button"><i class="fa-solid fa-trash-can"></i></button>
                     </div>
                 </li>
             </ul>
